create github pages

--- a/index.html
+++ b/index.html
@@ -43,11 +43,8 @@
                         <img src="assets/images/chess-club-logo-1080p-122x124.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-black display-4" href="https://mobirise.com">
-                        MOBIRISE
-                    </a>
-                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.com">
+                        Chess Club at UC Davis<br><br></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -64,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/q">free responsive web templates</a></section><section class="cid-qWHXZCFaOU mbr-fullscreen mbr-parallax-background" id="header2-o">
+<section class="engine"><a href="https://mobiri.se/c">web builder</a></section><section class="cid-qWHXZCFaOU mbr-fullscreen mbr-parallax-background" id="header2-o">
 
     
 
