--- a/MailList.html
+++ b/MailList.html
@@ -38,7 +38,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for subscribing!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dgzXvJL/7eHO9HDQ/6k7kncXY0Ww19V5CSxQ+nqPOT51EEK661eUe2LtIqrA8MTuyuTTyLgzfIaL1GHzDGgq3g5BW8geK/IKyL5O1WNyJ16x13ro0f87xiKgZ+cXfEKA" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VqjsHajNHjOcn1o0/Vp8xD6IqJzylAcKQqh1LyYRYX4lDks76nWP/bi2anQRovKmNNtuSWq8GrPbZrf/LhImTPDd5HeXb8eaqlSF+wtdfDl55ikWeM8TCBpmT4SMH2a2" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -69,7 +69,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobiri.se/z">best html templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobiri.se/k">develop own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
